--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "author": "mel jones | jones.mel@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.31",
+    "apollo-client": "^2.6.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "html-webpack-plugin": "^4.0.1",
     "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
