--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@types/react": "^16.9.31",
+    "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
